css class name fixes and footer white space margin fixed

--- a/src/styles/AboutDisplay.css
+++ b/src/styles/AboutDisplay.css
@@ -8,37 +8,39 @@
 
 .about-text {
   width: 550px;
-  /* max-width: 100%; */
-  /* padding: 0 10px; */
+  max-width: 100%;
+  padding: 0 10px;
+}
+
+.main {
+  /* height: 1000%; */
+  background-color: #191919;
 }
 
 .about {
-  width: 100%;
+  color: #f0f0f0;
   height: calc(100vh - 100px);
-  /* padding: 78px; */
-  /* margin: 0 auto; */
+  height: 100%;
+  padding: 78px;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  /* justify-content: space-around; */
-}
-
-.main{
-  background-color: #191919;
+  justify-content: space-around;
 }
 
 .about h1 {
   color: white;
   font-size: 80px;
   text-transform: capitalize;
-  /* margin-bottom: 20px; */
+  margin-bottom: 20px;
 }
 
 .about h5 {
   color: white;
   font-size: 25px;
   text-transform: capitalize;
-  /* margin-bottom: 25px; */
+  margin-bottom: 25px;
   letter-spacing: 2px;
 }
 
@@ -49,7 +51,7 @@
 .about-text p {
   letter-spacing: 1px;
   line-height: 28px;
-  /* margin-bottom: 45px; */
+  margin-bottom: 45px;
 }
 
 button {
